created blog directory

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<p>Hello World!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ollie's Webpage</title>
+    <meta charset="UTF-8">
+    <link href="your-stylesheet-link-here.css" rel="stylesheet" type="text/css">
+  </head>
+  
+  <body>
+    <h1>Hello, Welcome to olwiba's Blog</h1>
+    <h2>Here you are able to see what i've been getting up to lately at The Dev Academy!</h2>
+    
+    <p>
+      Here I will post links to my blog posts..
+    </p>
+  
+  </body>
+</html>
