Added links to blog posts

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <h2>Here you are able to see what i've been getting up to lately at The Dev Academy!</h2>
     
     <p>
-      Here I will post links to my blog posts..
+      Here are links to my blog posts:
     </p>
-  
+        <a href="http://olwiba.github.io/blog/c1-reflection-blog.hmtl">Post: Reflections</a>
+        <a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.hmtl">Post: Time and Habits</a>
   </body>
 </html>
