--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>
       Here are links to my blog posts:
     </p>
-        <a href="http://olwiba.github.io/blog/c1-reflection-blog.hmtl">Post: Reflections</a> <br>
-        <a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.hmtl">Post: Time and Habits</a>
+        <a href="http://olwiba.github.io/blog/c1-reflection-blog.html">Post: Reflections</a> <br>
+        <a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html">Post: Time and Habits</a>
   </body>
 </html>
