updated home page

--- a/index.html
+++ b/index.html
@@ -1,19 +1,48 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Ollie's Webpage</title>
-    <meta charset="UTF-8">
-    <link href="/styles/main.css" rel="stylesheet" type="text/css">
-  </head>
-  
+﻿<!DOCTYPE html>
+<!--
+Version: 1.0
+Dev Academy blog yo! check it out \0/
+-->
+<html >
+	<head>
+		<meta charset="UTF-8">
+		<title>Dev Academy Blog</title>
+		<link rel="icon" href="images/favicon.ico" type="icon">
+			<!-- Fonts -->
+		<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+			<!-- Style Sheets -->
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/buttons.css">
+	</head>
+<!--
+Checking out my source code? Let me know if there is anything that could be improved!
+-->
   <body>
-    <h1>Hello, Welcome to olwiba's Blog</h1>
-    <h2>Here you are able to see what i've been getting up to lately at The Dev Academy!</h2>
-    
-    <p>
-      Here are links to my blog posts:
-    </p>
-        <a href="http://olwiba.github.io/blog/c1-reflection-blog.html">Post: Reflections</a> <br>
-        <a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html">Post: Time and Habits</a>
+		<header id="header">
+				<!-- Logo -->
+			<img src="images/Olwiba-logo-grey.png" href="http://olwiba.github.io" alt="Olwiba" id="olwibalogo" />
+		</header>
+<html>
+  <body>
+		<div id="content">
+			<div id="shade">
+				<img src="images/welcome.png" href="http://olwiba.github.io" alt="Olwiba" id="welcome" />
+				<h1>Dev Academy Blog Posts</h1>
+				<p>Please choose which post you want to read:</p>
+			<div class="btn-container">
+					<ul class="nav">
+				   <li><a href="http://olwiba.github.io/blog/c1-reflection-blog.html" class="btn center">Reflections</a></li>
+				   <li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html" class="btn center">Time and Habits</a></li>
+				   </ul>
+			</div>
+			</div>
+		</div>
+
+
+</body>
+
+</html>
+
   </body>
 </html>
