--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ Checking out my source code? Let me know if there is anything that could be impr
 							<li><a href="http://olwiba.github.io" class="selected">Home</a></li>
 							<li><a href="http://olwiba.github.io/blog/c1-reflection-blog.html">Reflections</a></li>
 							<li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html">Time + Habits</a></li>
+							<li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html">Wish List</a></li>
 						</ul>
 					</nav>
 		</header>
