added link to homepage

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Checking out my source code? Let me know if there is anything that could be impr
 					<ul class="nav">
 				   <li><a href="http://olwiba.github.io/blog/c1-reflection-blog.html" class="btn center">Reflections</a></li>
 				   <li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html" class="btn center">Time and Habits</a></li>
+           <li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html" class="btn center">Design & Structure Wish List</a></li>
 				   </ul>
 			</div>
 			</div>
