--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Checking out my source code? Let me know if there is anything that could be impr
 							<li><a href="http://olwiba.github.io/blog/c1-reflection-blog.html">Reflections</a></li>
 							<li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html">Time + Habits</a></li>
 							<li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html">Wish List</a></li>
+							<li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p2.html">Tech: Part II</a></li>
 						</ul>
 					</nav>
 		</header>
@@ -43,7 +44,6 @@ Checking out my source code? Let me know if there is anything that could be impr
 					<ul class="nav">
 				   <li><a href="http://olwiba.github.io/blog/c1-reflection-blog.html" class="btn center">Reflections</a></li>
 				   <li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html" class="btn center">Time and Habits</a></li>
-           <li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html" class="btn center">Design & Structure Wish List</a></li>
 				   </ul>
 			</div>
 			</div>
