--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Checking out my source code? Let me know if there is anything that could be impr
 							<li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html">Time + Habits</a></li>
 							<li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html">Wish List</a></li>
 							<li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p2.html">Tech: Part II</a></li>
+							<li><a href="http://olwiba.github.io/blog/c2-emotional-intelligence.html">EQ</a></li>
 						</ul>
 					</nav>
 		</header>
