--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Checking out my source code? Let me know if there is anything that could be impr
 				   <li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html" class="btn center">Time and Habits</a></li>
            <li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html" class="btn center">Wish List</a></li>
            <li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p2.html" class="btn center">Tech: Blog Part II</a></li>
+           <li><a href="http://olwiba.github.io/blog/c2-emotional-intelligence.html" class="btn center">EQ</a></li>
 				   </ul>
 			</div>
 			</div>
