--- a/index.html
+++ b/index.html
@@ -1,62 +1,12 @@
-﻿<!DOCTYPE html>
-<!--
-Version: 1.0
-Dev Academy blog yo! check it out \0/
--->
-<html >
-	<head>
-		<meta charset="UTF-8">
-		<title>Dev Academy Blog</title>
-		<link rel="icon" href="images/favicon.ico" type="icon">
-			<!-- Fonts -->
-		<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-			<!-- Style Sheets -->
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/buttons.css">
-	</head>
-<!--
-Checking out my source code? Let me know if there is anything that could be improved!
--->
-  <body>
-		<header id="header">
-				<!-- Logo -->
-			<img src="images/Olwiba-logo-grey.png" href="http://olwiba.github.io" alt="Olwiba" id="olwibalogo" />
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="http://olwiba.github.io" class="selected">Home</a></li>
-							<li><a href="http://olwiba.github.io/blog/c1-reflection-blog.html">Reflections</a></li>
-							<li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html">Time + Habits</a></li>
-							<li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html">Wish List</a></li>
-							<li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p2.html">Tech: Part II</a></li>
-							<li><a href="http://olwiba.github.io/blog/c2-emotional-intelligence.html">EQ</a></li>
-						</ul>
-					</nav>
-		</header>
+﻿
+<!DOCTYPE html>
 <html>
+  <head>
+    <title></title>
+    <meta charset="UTF-8">
+    
+  </head>
   <body>
-		<div id="content">
-			<div id="shade">
-				<img src="images/welcome.png" href="http://olwiba.github.io" alt="Olwiba" id="welcome" />
-				<h1>Dev Academy Blog Posts</h1>
-				<p>Please choose which post you want to read:</p>
-			<div class="btn-container">
-					<ul class="nav">
-				   <li><a href="http://olwiba.github.io/blog/c1-reflection-blog.html" class="btn center">Reflections</a></li>
-				   <li><a href="http://olwiba.github.io/blog/c1-time-and-habits-blog.html" class="btn center">Time and Habits</a></li>
-           <li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p1.html" class="btn center">Wish List</a></li>
-           <li><a href="http://olwiba.github.io/blog/t2-html-css-dom-p2.html" class="btn center">Tech: Blog Part II</a></li>
-           <li><a href="http://olwiba.github.io/blog/c2-emotional-intelligence.html" class="btn center">EQ</a></li>
-				   </ul>
-			</div>
-			</div>
-		</div>
-
-
-</body>
-
-</html>
-
+  
   </body>
 </html>
