Updated home page and nav pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
-    <title></title>
     <meta charset="UTF-8">
-    
+    <title>Dev Academy Blog</title>
+    <link rel="icon" href="images/favicon.ico" type="icon">
+      <!-- Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+      <!-- Style Sheets -->
+  	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-  
+  <img src="images/Olwiba-logo-grey.png" alt="" id="olwibalogo">
+      <div class="row center" id="navigation">
+        <div class="one column"><a href="http://olwiba.github.io"><img src="images/home.png" alt="" id="homeimg"></a></div>
+        <div class="ten columns"><p> </p></div>
+        <div class="one colunm"><a href="#"> </a></div>
+      </div>
+    <div class="container">
+      <div class="row center">
+        <div class="twelve columns"><h1 class="heading">Welcome to my Site!!</h1></div>
+      </div>
+      <div class="row center">
+        <div class="twelve colunms"><p>What type of blog posts do you want to read?</p></div>
+      </div>
+      <div class="row center shade">
+          <ul id="categories" class="clr">
+            <li>
+                <div class="one-third column">
+                  <img src="images/code.png" alt="" href="http://olwiba.github.io/blog/technical.html"/>
+                  <h1>Technical Blogs</h1>
+                  <p>Check out my technical blogs</p>
+              </div>
+            </li>
+            <li>
+                <div class="one-third column">
+                  <img src="images/library.png" alt="" href="http://olwiba.github.io/blog/lib.html"/>
+                  <h1>View All</h1>
+                  <p>Check out all my posts!</p>
+              </div>
+            </li>
+              <li>
+                <div class="one-third column">
+                  <img src="images/cultural.png" alt="" href="http://olwiba.github.io/blog/cultural.html"/>
+                  <h1>Cultural Blogs</h1>
+                  <p>Check out my cultural blogs</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+    </div>
+      <div class="row center" id="footer">
+        <div class="twelve columns"><h6>Designed by <a href="mailto:Olwiba@gmail.com?subject=Contact Olwiba!" "email me">Olwiba</a> | © Copyright 2015</h6></div>
+      </div>
   </body>
 </html>
