--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       <div class="row center shade">
           <ul id="categories" class="clr">
             <li>
-                <div class="one-third column">
-                  <img src="images/code.png" alt="" href="http://olwiba.github.io/blog/technical.html"/>
+                <div class="one-third column" href="http://olwiba.github.io/blog/technical.html">
+                  <img src="images/code.png" alt=""/>
                   <h1>Technical Blogs</h1>
                   <p>Check out my technical blogs</p>
               </div>
             </li>
             <li>
-                <div class="one-third column">
-                  <img src="images/library.png" alt="" href="http://olwiba.github.io/blog/lib.html"/>
+                <div class="one-third column" href="http://olwiba.github.io/blog/lib.html">
+                  <img src="images/library.png" alt=""/>
                   <h1>View All</h1>
                   <p>Check out all my posts!</p>
               </div>
             </li>
               <li>
-                <div class="one-third column">
-                  <img src="images/cultural.png" alt="" href="http://olwiba.github.io/blog/cultural.html"/>
+                <div class="one-third column" href="http://olwiba.github.io/blog/cultural.html">
+                  <img src="images/cultural.png" alt=""/>
                   <h1>Cultural Blogs</h1>
                   <p>Check out my cultural blogs</p>
               </div>
