--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div class="row center shade">
           <ul id="categories" class="clr">
             <li>
-                <div class="one-third column" href="http://olwiba.github.io/blog/technical.html">
+                <div class="one-third column">
                   <img src="images/code.png" alt=""/>
-                  <h1>Technical Blogs</h1>
-                  <p>Check out my technical blogs</p>
+                  <h1 href="http://olwiba.github.io/blog/technical.html">Technical Blogs</h1>
+                  <p href="http://olwiba.github.io/blog/technical.html">Check out my technical blogs</p>
               </div>
             </li>
             <li>
