--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <li>
                 <div class="one-third column">
                   <img src="images/code.png" alt=""/>
-                  <h1 href="http://olwiba.github.io/blog/technical.html">Technical Blogs</h1>
-                  <p href="http://olwiba.github.io/blog/technical.html">Check out my technical blogs</p>
+                  <<a href="http://olwiba.github.io/blog/technical.html" >
+                  <h1>Technical Blogs</h1>
+                  <p>Check out my technical blogs</p>
+                  </a>
               </div>
             </li>
             <li>
