--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             <li>
                 <div class="one-third column">
                   <img src="images/code.png" alt=""/>
-                  <<a href="http://olwiba.github.io/blog/technical.html" >
-                  <h1>Technical Blogs</h1>
-                  <p>Check out my technical blogs</p>
-                  </a>
+                  <h1><a href="http://olwiba.github.io/blog/technical.html">Technical Blogs</a></h1>
+                  <p><a href="http://olwiba.github.io/blog/technical.html">Check out my technical blogs</a></p>
               </div>
             </li>
             <li>
