--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="one-third column">
                   <img src="images/code.png" alt=""/>
                   <h1><a href="http://olwiba.github.io/blog/technical.html">Technical Blogs</a></h1>
-                  <p><a href="http://olwiba.github.io/blog/technical.html">Check out my technical blogs</a></p>
+                  <p>Check out my technical blogs</p>
               </div>
             </li>
             <li>
