--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li>
                 <div class="one-third column">
                   <img src="images/code.png" alt=""/>
-                  <h1><a href="http://olwiba.github.io/blog/technical.html">Technical Blogs</a></h1>
+                  <h1>Technical Blogs</h1>
                   <p>Check out my technical blogs</p>
               </div>
             </li>
