--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="row center shade">
           <ul id="categories" class="clr">
             <li>
-                <div class="one-third column">
+                <div onclick="location.href='http://olwiba.github.io/blog/technical.html';" class="one-third column">
                   <img src="images/code.png" alt=""/>
                   <h1>Technical Blogs</h1>
                   <p>Check out my technical blogs</p>
