--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
               </div>
             </li>
             <li>
-                <div class="one-third column" href="http://olwiba.github.io/blog/lib.html">
+                <div onclick="location.href='http://olwiba.github.io/blog/lib.html';" class="one-third column">
                   <img src="images/library.png" alt=""/>
                   <h1>View All</h1>
                   <p>Check out all my posts!</p>
               </div>
             </li>
               <li>
-                <div class="one-third column" href="http://olwiba.github.io/blog/cultural.html">
+                <div onclick="location.href='http://olwiba.github.io/blog/cultural.html';" class="one-third column">
                   <img src="images/cultural.png" alt=""/>
                   <h1>Cultural Blogs</h1>
                   <p>Check out my cultural blogs</p>
