--- a/webvestigator/index.html
+++ b/webvestigator/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row mainHead">
             <div class="three columns logo">
-                <a href="olwiba.github.io/webvestigator/index.html"><img alt=
+                <a href="index.html"><img alt=
                 "Webvestigator" class="logo" src=
                 "resources/images/webLogo.png"></a>
             </div>
