Added Gtracking code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118393158-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-118393158-1');
+        </script>
+
+
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Ollie Bannister</title>
@@ -149,7 +160,7 @@
                 </div>
             </main>
             <footer>
-                <p class="footer-text">Handcrafted by myself <span>|</span> Check out my <a href="https://github.com/Olwiba/ecard">Source code</a></p>
+                <p class="footer-text">Handcrafted by myself <span>|</span> Checkout my <a href="https://github.com/Olwiba/ecard">Source code</a></p>
             </footer>
         </div>
 
